[project]
name = "shark-tabfm-tutorial"
version = "0.1.0"
description = "Battle of the Beach Thrillers: Zero-Shot TabFM vs. Saturated CatBoost Text Analytics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "catboost>=1.2.5",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "notebook>=7.1.0",
    "xlrd>=2.0.1",
    "einops>=0.8.2",
    "huggingface-hub",
    "torch>=2.2.0",
    "python-dotenv",
    "safetensors",
    "tabfm @ git+https://github.com/google-research/tabfm.git#egg=tabfm",
]

[tool.uv]
package = false
